# avrcontrol

./: CMakeLists.txt
src/: AVRDevice.cpp  AVRDevice.hpp  AvrDevice.cpp  AvrDevice.hpp  RemoteProperty.cpp  RemoteProperty.hpp  marantzuart.hpp
tests/: test_commands.cpp  test_creation.cpp  test_parser.cpp
